--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
    </header>
    <main>
     <section id="Home">
-        <nav id="right-nav">
-            <ul>
-              <li><a href="#">login</a></li>
-              <li><a href="#">Regester</a></li>
-            </ul>
-          </nav> 
+        <div id="login-logout">
+         
+               <button id="login" type="button">login</button>
+               <button id="register" type="button">register</button>
+               
+         </div> 
         <div id="section-content">
             <h2>Home</h2>
         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. </p>
