--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     <section id="Home">
         <div id="login-logout">
          
-               <button id="login" type="button">login</button>
-               <button id="register" type="button">register</button>
+               <button id="option_login" type="button">login</button>
+               <button id="option_register" type="button">register</button>
                
          </div> 
         <div id="section-content">
